feat/71 (고객용 대시보드)rombok->record형식으로 수정